--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ dependencies = [
     "numpy (>=2.3.5,<3.0.0)"
 ]
 
-
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+packages = [
+    { include = "VideoCreatorStats", from = "include" }
+]
